1. Метод .of [#374533]